Basics/sysdig_demo/nodejsrest/nodejsrest_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsrest
  labels:
    app: nodejsrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejsrest
  template:
    metadata:
      labels:
        app: nodejsrest
    spec:
      containers:
      - name: nodejsrest
        image: docker.io/giriraj789/nodejsrest:v1
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "200Mi"
            cpu: "300m"
        ports:
        - containerPort: 8080
