Basics/sysdig_demo/nodejsrest/nod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejsrest
  labels:
    nodejsrest: webserver
spec:
  selector:
    app: nodejsrest
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
