Basics/sysdig_demo/nodejsrest/ingress-nodejsrest.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodejsrest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ec2-3-228-77-204.compute-1.amazonaws.com
    http:
      paths:
      - path: /users
        backend:
          serviceName: nodejsrest
          servicePort: 8081
      - path: /products
        backend:
          serviceName: nodejsrest
          servicePort: 8081
